Fix overflow in loanboard

--- a/microservices/admin/imports/client/components/Board/Board.scss
+++ b/microservices/admin/imports/client/components/Board/Board.scss
@@ -24,10 +24,11 @@
     flex-direction: column;
     flex-shrink: 0;
 
-    margin: 8px;
+    margin: 4px;
     padding: 0;
 
     background-color: $grey3;
+    overflow-x: hidden;
 
     &-subtitle {
       padding: 8px;
